--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="gv_comment1">评价1</string>
     <string name="gv_comment2">评价2</string>
     <string name="gv_comment3">评价3</string>
+    <string name="my_comment">我的评价</string>
 
 </resources>
